# OpenBrigade

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CONNECTORS_RUNBOOK.md  Dockerfile  GUI-TODO.md  OPERATING_ARCHITECTURE.md  OpenBrigade_V0.1_Design_Summary.md  PROTOTYPE.md  RC_PUNCHLIST_v1_0.md  RC_READINESS.md  README.md  RELEASE_CHECKLIST.md  TODO-v0_1.md  TODO-v0_2.md  TODO-v0_4.md  TODO-v0_5.md  TODO-v0_6.md  TODO-v0_9.md  TODO-v0_9_USER_TESTING.md  TODO.md  brigade.config.example.json  docker-compose.yml  exec_summary_v0_9_2.md  pyproject.toml  tmTODO.md
brigade/: __init__.py  auth.py  chief_chat.py  cli.py  config.py  connectors.py  datastores.py  db.py  efficiency.py  export.py  finance.py  health.py  ingestion.py  intake.py  kb.py  knowledge.py  knowledge_web.py  ladder.py  logging.py  markdown.py  memory.py  meta.py  orchestrator.py  profile.py  prompt_floors.py  providers.py  rbac.py  reconcile.py  rest.py  runner.py  schemas.py  secrets.py  services.py  state.py  store.py  time.py  tools.py  tui.py  web.py  workspace.py
docs/: CONNECTORS_RUNBOOK.md  LIBRARY_SYSTEMS.md  MANUAL_ORCHESTRATION.md  MCP_CLIENT_POST_RC.md  MEMORY_ARCHITECTURE.md  NETWORK_TOPOLOGY.md  ONBOARDING.md  OPERATING_ARCHITECTURE.md  ORCHESTRATION.md  OpenBrigade-Concept.md  PROMPT_ARCHITECTURE.md  PROTOTYPE.md  RC_PROACTIVITY_DEMO.md  RELEASE_CHECKLIST.md  harness-tool-findings.md  harness-tool-reliability-runbook.md
migrations/: 0001_core_state.sql  0002_runtime_records.sql  0003_assignment_execution_claims.sql  0004_team_records.sql  0005_ui_layouts.sql  0012_model_inventory.sql  (+8 more)
(+112 files in other folders)
